--- a/02_case/assets/css/style.css
+++ b/02_case/assets/css/style.css
@@ -78,8 +78,9 @@ div > section {
 
 }
 body > div > section > img {
+    display: inline;
     border: 1px solid green;
-    width: calc((100vw - 26vw)/ 3);
+    width: calc((100vw - 24vw)/ 3);
 
 }
 
@@ -90,12 +91,7 @@ body > div > p {
     margin-top: 10px;
     top: 40px;
 }
-/*div > p {
-    position: relative;
-    margin-left: 10px;
-    margin-top: 10px;
-    top: 620px;
-}*/
+
 
 span{
     font-weight: bold ;
@@ -103,14 +99,22 @@ span{
 
 footer {
     position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 40px;
+    height: 30px;
     width: 100%;
     background-color: rgb(70, 66, 66);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+}
+
+footer > span {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    height: fit-content;
+    width: fit-content;
     color: white;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    margin: auto;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+
 }
